force-app/main/default/objects/EYI_Deviation_Plan__c/EYI_Deviation_Plan__c.object-meta.xml
<CustomObject>
    <label>Deviation Plan</label>
    <nameField>
        <displayFormat>DAF-{000000}</displayFormat>
        <label>Deviation Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>