force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>