force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Approver_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approver_Date__c</fullName>
    <label>Approver Date</label>
    <type>Date</type>
</CustomField>