force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Base_Rate_L__c.field-meta.xml
<CustomField>
    <fullName>EYI_Base_Rate_L__c</fullName>
    <formula>EYI_Quote__r.EYI_Base_Rate_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Rate L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>