force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Date__c</fullName>
    <formula>EYI_Opportunity_Name__r.EYI_Booking__r.EYI_Actual_Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>