force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Current_Apartment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Current_Apartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Apartment</label>
    <referenceTo>EYI_Inventory__c</referenceTo>
    <relationshipLabel>Deviation Plans</relationshipLabel>
    <relationshipName>Deviation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>