force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_DAF_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_DAF_Description__c</fullName>
    <label>DAF Description</label>
    <type>TextArea</type>
</CustomField>