force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_DAF_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_DAF_Type__c</fullName>
    <label>DAF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Deviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>