force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>