force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Final_Quotation_DAF__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Quotation_DAF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Quotation DAF</label>
    <type>Checkbox</type>
</CustomField>