force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Functional_Head__c.field-meta.xml
<CustomField>
    <fullName>EYI_Functional_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deviation_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>