force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_L2_Base_Rate_PSF__c.field-meta.xml
<CustomField>
    <fullName>EYI_L2_Base_Rate_PSF__c</fullName>
    <formula>EYI_Project__r.EYI_L2_Base_Rate_PSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L2 Base Rate PSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>