force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Next_Version__c.field-meta.xml
<CustomField>
    <fullName>EYI_Next_Version__c</fullName>
    <formula>EYI_Version__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Version #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>