force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Price_Sheet_Applicable_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Price_Sheet_Applicable_date__c</fullName>
    <label>Price Sheet Applicable date</label>
    <type>Date</type>
</CustomField>