force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Quotation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Deviation Plans (Quotation)</relationshipLabel>
    <relationshipName>Deviation_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>