force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>Deviation Plans</relationshipLabel>
    <relationshipName>Deviation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>