force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_RERA_Carpet_area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Carpet_area_Sqft__c</fullName>
    <label>RERA Carpet area(Sqft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>