force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Send_Approval_to_Promoter_SIS__c.field-meta.xml
<CustomField>
    <fullName>EYI_Send_Approval_to_Promoter_SIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Approval to Promoter (SIS).&quot;</label>
    <type>Checkbox</type>
</CustomField>