force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Site_Visit_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Visit_date__c</fullName>
    <formula>EYI_Opportunity_Name__r.EYI_CIF_Record__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit date</label>
    <type>Date</type>
</CustomField>