force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Client</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>PREC</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Privilege</fullName>
            </value>
            <value>
                <fullName>REC Lead</fullName>
            </value>
            <value>
                <fullName>SM Self Sourcing</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>ChatBot</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Archive Leads</fullName>
                <isActive>false</isActive>
                <label>Archive Leads</label>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
                <isActive>false</isActive>
                <label>Channel Partner</label>
            </value>
            <value>
                <fullName>Cold Calling</fullName>
                <isActive>false</isActive>
                <label>Cold Calling</label>
            </value>
            <value>
                <fullName>Digital Media</fullName>
                <isActive>false</isActive>
                <label>Digital Media</label>
            </value>
            <value>
                <fullName>EYI Contact Center</fullName>
                <isActive>false</isActive>
                <label>EYI Contact Center</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
                <isActive>false</isActive>
                <label>Exhibition</label>
            </value>
            <value>
                <fullName>Lead Reference</fullName>
                <isActive>false</isActive>
                <label>Lead Reference</label>
            </value>
            <value>
                <fullName>Loyalty</fullName>
                <isActive>false</isActive>
                <label>Loyalty</label>
            </value>
            <value>
                <fullName>Newspaper Ad</fullName>
                <isActive>false</isActive>
                <label>Newspaper Ad</label>
            </value>
            <value>
                <fullName>OOH</fullName>
                <isActive>false</isActive>
                <label>OOH</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Outdoor Activation</fullName>
                <isActive>false</isActive>
                <label>Outdoor Activation</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Project Website</fullName>
                <isActive>false</isActive>
                <label>Project Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>