force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>EYI_Source_Details__c</fullName>
    <label>Source Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>