force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by L1 Approver</fullName>
            </value>
            <value>
                <fullName>Approved by Final Approver</fullName>
            </value>
            <value>
                <fullName>Rejected by Final Approver</fullName>
            </value>
            <value>
                <fullName>Rejected by L1 Approver</fullName>
            </value>
            <value>
                <fullName>Approved by L2 Approver</fullName>
            </value>
            <value>
                <fullName>Rejected by L2 Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>