force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_TL_Approver__c.field-meta.xml
<CustomField>
    <fullName>EYI_TL_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deviation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>