force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Type__c</fullName>
    <label>Unit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>