force-app/main/default/objects/EYI_Deviation_Plan__c/fields/EYI_Version__c.field-meta.xml
<CustomField>
    <fullName>EYI_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>